Optimizations, format, and name convention fixes
Improved readability of member variables across all classes, as they are better sorted. Will need to test these changes.